# Tubes-Alstrukdat-Kelompok-I

./: .gitignore  CMakeLists.txt  README.md  bug.md  makefile
doc/: Pedoman Tugas Besar IF2110 2022_2023.docx
lib/: boolean.h
lib/deliverylist/: deliverylist.c  deliverylist.h  driverdl.c  run.bat
lib/inventory/: driverinventory.c  inventory.c  inventory.h  run.bat
lib/listmakanan/: listmakanan.c  listmakanan.h  run.bat
lib/liststatik/: driver.c  liststatik.c  liststatik.h
lib/makanan/: driver.c  makanan.c  makanan.h  run.bat
lib/matrix/: driver.c  driverpeta.c  matrix.c  matrix.h  peta.c  peta.h
lib/point/: driver.c  point.c  point.h
lib/queue/: driver.c  priodriver.c  prioqueuetime.c  prioqueuetime.h  queue.c  queue.h
lib/set/: driverSet.c  set.c  set.h
lib/simulator/: driver.c  run.bat  simulator.c  simulator.h
lib/stack/: driver.c  driverstack.c  stack.c  stack.h
lib/string/: driver.c  driverstring.c  driverstringword.c  string.c  string.h
lib/time/: driver.c  drivertime.c  time.c  time.h
lib/tree/: driver.c  tree.c  tree.h
lib/waktusim/: mekawaktu.c  mekawaktu.h
lib/wordmachine/: charmachine.c  charmachine.h  driver.c  wordmachine.c  wordmachine.h
program/: main.c  main.h  run.bat
program/lib/catalog/: catalog.c  catalog.h
program/lib/deliverylist/: deliverylist.c  deliverylist.h  driver.c  driverdl.c  run.bat
program/lib/inisiasi/: inisiasi.c  inisiasi.h
program/lib/inventory/: driver.c  driverinventory.c  inventory.c  inventory.h  run.bat
test/: makanan.txt  peta.txt  resep.txt  resep_2.txt  test.txt
(+52 files in other folders)
